app/styles/app.sass
// Bootstrap Variables
$icon-font-path: "../../node_modules/bootstrap-sass/assets/fonts/bootstrap/"

// Import Bootstrap
@import ../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap
@import ../../node_modules/font-awesome/scss/font-awesome

// Main Primary color
$color-sea-green: #2A7F4A
$color-de-york: #7CBC93
$color-fruit-salad: #4D9D6B
$color-jewel: #126330
$color-crusoe: #01441A

$color-secondary-1-0: #285B6E
$color-gothic: #6E95A4
$color-secondary-1-2: #457588
$color-secondary-1-3: #124356
$color-blue-whale: #032B3B

$color-secondary-2-0: #AF773A
$color-secondary-2-1: #FFD5A8
$color-secondary-2-2: #D8A36A
$color-secondary-2-3: #895319
$color-secondary-2-4: #5D3101

$color-complement-0: #AF4F3A
$color-complement-1: #FFB7A8
$color-complement-2: #D87D6A
$color-complement-3: #892C19
$color-complement-4: #5D1101

*,
*::before,
*::after
  box-sizing: border-box

body
  padding: 15px
  animation: fade-in 2s ease-in-out
  opacity: 1
  overflow-x: hidden

img
  max-width: 100%

@keyframes fade-in
  0%
    opacity: 0

  100%
    opacity: 1

@keyframes slide
  0%
    left: 100%

  100%
    left: 0

@keyframes slideRight
  0%
    left: 0

  100%
    left: 100%

@keyframes slideUp
  0%
    opacity: 0
    transform: translate3d(0, 50%, 0)

  100%
    opacity: 1
    transform: translate3d(0, 0, 0)

@keyframes loadingFade
  0%
    opacity: 0
  100%
    opacity: 1


.ribbon
  width: 175px
  padding: 10px
  padding-left: 40px
  padding-right: 40px
  position: absolute
  text-align: center
  transform: rotate(45deg)
  right: -50px
  top: 15px

  &.night-mode
    background-color: $color-blue-whale
    color: #f0f0f0

  &.day-mode
    background-color: #f0f0f0
    color: $color-blue-whale
    display: none

  cursor: pointer
  z-index: 100

.link
  color: $color-fruit-salad
  cursor: pointer

  &:hover
    color: $color-sea-green

.slide
  animation: slide 0.5s forwards

.slide-right
  animation: slideRight 0.5s forwards

.header
  display: flex
  align-items: center
  margin-bottom: 20px

.name-container,
.headshot-container
  display: flex
  align-items: center
  justify-content: center

.name-container
  overflow: hidden

.name
  padding-left: 15px
  margin-top: 0px
  font-size: 2.5em
  font-family: "Futura", "Montserrat", sans-serif
  text-transform: uppercase
  animation: slideUp 0.5s forwards
  animation-delay: 1s
  opacity: 0

.headshot
  border-radius: 100%
  height: 100px
  width: 100px

.social-list
  border-right: 1px solid gray

  .social-list-items
    a
      color: black
      text-decoration: none
      cursor: pointer
      font-weight: bold
      font-family: "Lato"
      font-size: 1.75rem


.heading
  font-weight: bold
  font-family: "Futura", "Montserrat"
  text-transform: uppercase
  margin-bottom: 10px
  margin-top: 10px
  font-size: 2rem

.descriptions
  font-size: 1.6rem

.interests
  font-size: 1.6rem

.project-heading
  font-family: "Lato"
  font-weight: bold
  font-size: 1.65rem

.project-item
  margin-bottom: 10px
  cursor: pointer
  display: flex
  flex-direction: row-reverse
  align-items: center
  justify-content: center
  overflow: hidden
  transition: all 0.5s
  border-radius: 5px
  color: black
  font-size: 1.6rem

  &:hover,
  &:focus
    color: black
    text-decoration: none

  &:hover
    background-color: rgba($color-gothic, 0.2)

  &:visited
    background-color: none

.project-image
  opacity: 0
  padding-right: 0px

  &.slide,
  &.slide-right
    opacity: 1

#blog-content
  display: none

  #loading-spinner
    font-size: 30px
    display: inline-block
    width: 50%
    margin-left: 25%
    text-align: center
    font-size: 2.5rem
    .letter
      animation-name: loadingFade
      animation-duration: 1.6s
      animation-iteration-count: infinite
      animation-direction: linear
      display: inline-block
    .l-1
      animation-delay: 0.48s
    .l-2
      animation-delay: 0.6s
    .l-3
      animation-delay: 0.72s
    .l-4
      animation-delay: 0.84s
    .l-5
      animation-delay: 0.96s
    .l-6
      animation-delay: 1.08s
    .l-7
      animation-delay: 1.2s
    .l-8
      animation-delay: 1.32s
    .l-9
      animation-delay: 1.44s
    .l-10
      animation-delay: 1.56s

  .error
    .blog-titles,
    .blog-descriptions
      a
        color: $color-fruit-salad

.blog-posts
  padding-top: 10px
  padding-bottom: 10px
  border-bottom: 1px solid gray
  display: flex
  flex-direction: row
  align-items: center
  color: black
  &:hover,
  &:visited
    text-decoration: none
    color: black

  &.see-all
    border: none
    display: flex
    justify-content: center
    align-items: center

.blog-thumbnail
  border-radius: 5px

.blog-titles
  font-size: 2.5rem
  margin-bottom: 0px
  font-weight: 700
  letter-spacing: -.25px

.blog-subtitles
  font-size: 16px
  font-family: "Futura","Montserrat",Arial,sans-serif
  font-weight: 300
  margin-top: 5px
  margin-bottom: 5px
  letter-spacing: -.5px
  color: rgba(0,0,0,.44)

.blog-descriptions
  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif
  font-size: 18px
  font-weight: 400
  line-height: 1.25


@media screen and (max-width: 991px)
  body
    padding-top: 0px

  #app-container
    position: relative
    overflow-x: hidden
  .social-list
    border-right: none
    border-top: 1px solid gray
    padding-top: 10px
    display: inline-block
    width: 100%

    .social-list-items
      float: left
      width: 20%
      text-align: center
      a
        font-size: 1.25rem

  .project-item
    &:hover,
    &:visited
      background-color: transparent

  .project-image
    opacity: 1

  .blog-posts
    display: inline-block
    width: 50%
    float: left
    height: 400px
    padding: 10px
    border-bottom: none

  .blog-thumbnail-container
    max-height: 150px
    overflow: hidden
    border-radius: 5px

  .blog-titles
    font-size: 2rem

@media screen and (max-width: 736px)
  .project-item
    flex-direction: column
    .project-image
      max-height: 150px
      overflow-y: hidden
      display: flex
      align-items: center
      margin-bottom: 10px
      margin-top: 10px
      border-radius: 5px
      padding-left: 0

  .ribbon
    right: -60px
    top: 10px
    text-align: center
    font-size: 1rem

  .name
    font-size: 1.25em
    padding-left: 0px

  #blog-content
    #loading-spinner
      width: 100%
      margin: 0 auto

  .blog-posts
    display: block
    width: 100%
    height: auto

